--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <h1>Git</h1>
+    <h1>Git:</h1>
+    <h1>The Ball Game</h1>
+
+    <div class="ball">100</div>
 
 
     <script src="js/script.js"></script>
