Set onballclick function in html and js with basic printing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Git:</h1>
     <h1>The Ball Game</h1>
 
-    <div class="ball">100</div>
+    <div onclick="onBallClick()" class="ball">100</div>
 
 
     <script src="js/script.js"></script>
