Add ball2 with different color poped out of stashe

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>The Ball Game</h1>
 
     <div onclick="onBallClick()" class="ball">100</div>
+    <div onclick="onBallClick()" class="ball ball2">100</div>
 
 
     <script src="js/util.js"></script>
