--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <div onclick="onBallClick()" class="ball">100</div>
     <div onclick="onBallClick()" class="ball ball2">100</div>
-
+    <div onclick="onBallClick()" class="ball ball3">100</div>
+    
 
     <script src="js/util.js"></script>
     <script src="js/script.js"></script>
