Add functionality for the third ball via onThirdBallClick and modify original onBallClick

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Git:</h1>
     <h1>The Ball Game</h1>
 
-    <div onclick="onBallClick()" class="ball">100</div>
-    <div onclick="onBallClick()" class="ball ball2">100</div>
-    <div onclick="onBallClick()" class="ball ball3">100</div>
-    
+    <div onclick="onBallClick(this)" class="ball">100</div>
+    <div onclick="onBallClick(this)" class="ball ball2">100</div>
+    <div onclick="onThirdBallClick()" class="ball ball3">100</div>
+
 
     <script src="js/util.js"></script>
     <script src="js/script.js"></script>
