--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div onclick="onBallClick(this)" class="ball ball2">100</div>
     <div onclick="onThirdBallClick()" class="ball ball3">100</div>
     <div onclick="onFourthBallClick()" class="ball ball4">100</div>
+    <div onclick="onFifthBallClick()" class="ball ball5">100</div>
 
 
     <script src="js/util.js"></script>
