Added sixth ball with a new empty function and a little bit of styling + added onload function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body onload="onInit()">
     <h1>Git:</h1>
     <h1>The Ball Game</h1>
 
@@ -17,6 +17,7 @@
     <div onclick="onThirdBallClick()" class="ball ball3">100</div>
     <div onclick="onFourthBallClick()" class="ball ball4">100</div>
     <div onclick="onFifthBallClick()" class="ball ball5">100</div>
+    <div onclick="onSixthBallClick()" class="ball ball6">100</div>
 
 
     <script src="js/util.js"></script>
